--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,31 @@
 {
     "name": "joshuaestes/hal",
+    "description": "Provides HAL json/xml support",
+    "keywords": ["hal","json","xml"],
+    "homepage": "https://github.com/JoshuaEstes/hal",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Joshua Estes",
+            "homepage": "http://joshuaestes.me"
+        }
+    ],
+    "support": {
+        "issues": "https://github.com/JoshuaEstes/hal/issues"
+    },
     "config": {
         "bin-dir": "bin"
     },
+    "minimum-stability": "dev",
     "autoload": {
         "psr-0": { "": "src/"}
     },
     "require-dev": {
         "phpunit/phpunit": "*"
     },
-    "minimum-stability": "dev",
-    "require": {
-
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
+        }
     }
 }
